--- a/package.json
+++ b/package.json
@@ -3,6 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@vx/axis": "^0.0.189",
+    "@vx/gradient": "^0.0.189",
+    "@vx/group": "^0.0.189",
+    "@vx/hierarchy": "^0.0.189",
+    "@vx/network": "^0.0.189",
+    "@vx/scale": "^0.0.189",
+    "@vx/shape": "^0.0.189",
+    "d3-hierarchy": "^1.1.8",
+    "lodash.clamp": "^4.0.3",
+    "lodash.inrange": "^3.3.6",
+    "lodash.random": "^3.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
