feat: move to actual GraphQL API query for data

--- a/example.env
+++ b/example.env
@@ -1,2 +1,14 @@
-# this is used to format the Date display for the Month and Year
+# The `REACT_APP_` prefix for these ENV variables ensures that they will be picked
+# up by the `create-react-app` build process and will be exposed to the client side
+# under an Object referenced via `process.env`
+
+# GitHub API settings
+REACT_APP_GITHUB_API_ENDPOINT=
+REACT_APP_GITHUB_API_TOKEN=
+
+# Maximum Query Depth Limits (NOTE: GITHUB_MAX_USERS is not implemented yet)
+REACT_APP_GITHUB_MAX_USERS=1000
+REACT_APP_GITHUB_MAX_REPOS=100
+
+# Date display for the Month and Year
 REACT_APP_LOCALE=en-us
