--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "github-viz",
-  "version": "0.1.0",
-  "private": true,
+  "name": "@ericrallen/github-viz",
+  "version": "0.2.0",
+  "license": "LGPL-3.0",
+  "private": false,
   "dependencies": {
     "@vx/axis": "^0.0.189",
     "@vx/gradient": "^0.0.189",
@@ -10,11 +11,18 @@
     "@vx/network": "^0.0.189",
     "@vx/scale": "^0.0.189",
     "@vx/shape": "^0.0.189",
+    "apollo-boost": "^0.4.0",
+    "apollo-cache-inmemory": "^1.6.0",
+    "apollo-link": "^1.2.11",
+    "apollo-link-http": "^1.5.14",
     "d3-hierarchy": "^1.1.8",
+    "graphql": "^14.3.1",
     "lodash.clamp": "^4.0.3",
+    "lodash.debounce": "^4.0.8",
     "lodash.inrange": "^3.3.6",
     "lodash.random": "^3.2.0",
     "react": "^16.8.6",
+    "react-apollo": "^2.5.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
